welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:9: error: recursive variable die1 needs type
      var die1 = die1 + 1
                 ^